fix body not covering entire screen

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@
 body {
     background: var(--bg-color);
     padding: 0 10vw;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
 }
 
 a {
